[project]
name = "be-everywhere-bot"
version = "0.2.0"
description = "Mesh-sync posts across social networks and RSS feeds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "croniter>=6.2.2",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
